--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "heroicons": "^2.1.5",
     "next": "15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
