--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
+    "framer-motion": "^11.11.15",
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.5",
     "next": "15.0.3",
