--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
+    "@react-oauth/google": "^0.12.1",
     "framer-motion": "^11.11.15",
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.5",
+    "jwt-decode": "^4.0.0",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
