--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
     "@react-oauth/google": "^0.12.1",
+    "firebase": "^11.0.2",
     "framer-motion": "^11.11.15",
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.5",
@@ -19,7 +20,8 @@
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@types/node": "^20",
